[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/adventurer/adventurer_name_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/adventurer/rune_icon_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://UI/adventurer/adventurer.gd" type="Script" id=4]
[ext_resource path="res://UI/numerals/two.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/adventurer/state_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://UI/numerals/ten.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/numerals/label_spritesheet.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 12, 28, 5 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 6, 20, 5 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 23, 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 29, 5 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 31, 0, 15, 5 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 26, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 6, 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 7, 6, 6 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 14, 6, 6 )

[node name="adventurer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -450.0
margin_bottom = -250.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 85.0
margin_bottom = 48.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="active_bg" type="ColorRect" parent="Panel"]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 84.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_labels" type="Control" parent="Panel"]
margin_left = -13.0
margin_right = 27.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fighter_name" type="TextureRect" parent="Panel/name_labels"]
visible = false
margin_left = 15.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 7.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rogue_name" type="TextureRect" parent="Panel/name_labels"]
visible = false
margin_left = 15.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 7.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cleric_name" type="TextureRect" parent="Panel/name_labels"]
visible = false
margin_left = 15.0
margin_top = 2.0
margin_right = 43.0
margin_bottom = 7.0
texture = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_labels" type="Control" parent="Panel"]
margin_right = 47.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="injured" type="TextureRect" parent="Panel/state_labels"]
visible = false
margin_left = 54.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 42.0
texture = SubResource( 7 )

[node name="dead" type="TextureRect" parent="Panel/state_labels"]
visible = false
margin_left = 68.0
margin_top = 2.0
margin_right = 108.0
margin_bottom = 42.0
texture = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 1.0
margin_top = 8.0
margin_right = 84.0
margin_bottom = 9.0
color = Color( 0.717647, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wounds_label" type="TextureRect" parent="Panel"]
margin_left = 2.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 17.0
texture = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wounds_panel" type="Panel" parent="Panel"]
margin_left = 29.0
margin_top = 10.0
margin_right = 59.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/wounds_panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 8.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_wounds" type="Panel" parent="Panel"]
margin_left = 60.0
margin_top = 10.0
margin_right = 75.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="Panel/total_wounds"]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 10.0
margin_bottom = 8.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Panel/total_wounds"]
margin_left = 2.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_wounds" type="Panel" parent="Panel"]
margin_left = 74.0
margin_top = 10.0
margin_right = 83.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="Panel/max_wounds"]
margin_left = 1.0
margin_top = 1.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Panel/max_wounds"]
margin_top = 2.0
margin_right = 7.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ten" parent="Panel/max_wounds/Control" instance=ExtResource( 7 )]
margin_left = 2.0
margin_right = 7.0

[node name="rune_inventory" type="Panel" parent="Panel"]
margin_left = 1.0
margin_top = 20.0
margin_right = 29.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/rune_inventory"]
margin_left = 1.0
margin_top = 9.0
margin_right = 27.0
margin_bottom = 10.0
color = Color( 0.270588, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel/rune_inventory"]
margin_left = 1.0
margin_top = 18.0
margin_right = 27.0
margin_bottom = 19.0
color = Color( 0.270588, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Panel/rune_inventory"]
margin_left = 9.0
margin_top = 1.0
margin_right = 10.0
margin_bottom = 27.0
color = Color( 0.270588, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Panel/rune_inventory"]
margin_left = 18.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 27.0
color = Color( 0.270588, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="r_1" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 2.0
margin_top = 2.0
margin_right = 8.0
margin_bottom = 8.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="r_2" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 11.0
margin_top = 2.0
margin_right = 17.0
margin_bottom = 8.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="r_3" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 20.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 8.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_1" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 2.0
margin_top = 11.0
margin_right = 8.0
margin_bottom = 17.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_2" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 11.0
margin_top = 11.0
margin_right = 17.0
margin_bottom = 17.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_3" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 20.0
margin_top = 11.0
margin_right = 26.0
margin_bottom = 17.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="g_1" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 2.0
margin_top = 20.0
margin_right = 8.0
margin_bottom = 26.0
texture = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="g_2" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 11.0
margin_top = 20.0
margin_right = 17.0
margin_bottom = 26.0
texture = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="g_3" type="TextureRect" parent="Panel/rune_inventory"]
margin_left = 20.0
margin_top = 20.0
margin_right = 26.0
margin_bottom = 26.0
texture = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="can_use_ability" type="Control" parent="."]
margin_left = 37.0
margin_top = 21.0
margin_right = 77.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="can_use_ability"]
margin_left = -8.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 27.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="active_bg" type="ColorRect" parent="can_use_ability/Panel"]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 8.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="two" parent="can_use_ability/Panel" instance=ExtResource( 5 )]
margin_left = 2.0
margin_top = 11.0
margin_right = 7.0
margin_bottom = 16.0

[node name="ColorRect" type="ColorRect" parent="can_use_ability"]
margin_left = 1.0
margin_top = -1.0
margin_right = 47.0
color = Color( 0.717647, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="can_use_ability"]
margin_left = 47.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 27.0
color = Color( 0.717647, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="can_use_ability"]
margin_left = 1.0
margin_top = 26.0
margin_right = 47.0
margin_bottom = 27.0
color = Color( 0.717647, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
